# programacionparalela

01Fractal/: CMakeLists.txt  fractal_serial.cpp  fractal_serial.h  fractal_simd.cpp  fractal_simd.h  main.cpp  palette.cpp  palette.h
01_FRACTAL_JULIA/: CMakeLists.txt  fractal_serial.cpp  fractal_serial.h  fractal_simd.cpp  main.cpp  palette.cpp
03Fractaldll/: CMakeLists.txt  comandos.txt  fractal_simd.cpp  fractal_simd.h
04_Ejemplo-OpenMP/: CMakeLists.txt  main.cpp
05_Ejemplo_MPI/: CMakeLists.txt  Prueba.cpp  Prueba2.cpp  Prueba3.cpp  Prueba4.cpp  PruebaColectivo1.cpp  PruebaColectivo2.cpp  PruebaColectivoFile.cpp  PruebaColectivoImagen.cpp  datos.txt  ejercicioImagen.cpp  ejercicioImagen2.cpp  ejercicioPrueba.cpp  matirces_colaborativo.cpp  matrices_rellenadas.cpp  matrices_relleno.cpp  repaso01.cpp
06_FractalMPI/: CMakeLists.txt  draw_text.cpp  main.cpp  palette.h  prender_led.py
07_cuda/: CMakeLists.txt  kernel.cu  main.cpp
08_FractalCuda/: CMakeLists.txt  kernel.cu  main.cpp
Burning1-main/: CMakeLists.txt  burning_gpu.cu  fractal_Burning.cpp  fractal_Burning.h  fractal_BurningOMP.cpp  fractal_simd.cpp  main.cpp
Burning2-main/: fractal_mpi.cpp  fractal_mpi.h  main.cpp
Correccion_Prueba1/: CMakeLists.txt  draw_text.cpp  draw_text.h  fractal_mpi_newton.cpp  fractal_mpi_newton.h  main.cpp
Correccion_Prueba2/: CMakeLists.txt  fractal_mpi_burningShip.cpp  fractal_mpi_burningShip.h  main.cpp
MPI_Ejemplo_CC/: CMakeLists.txt  matirces_colaborativo.cpp
MPI_Ejemplo_MR/: CMakeLists.txt  matrices_rellenadas.cpp
Matriz-main/: matriz.cu  matrizmpi.cpp
Newton1-main/: CMakeLists.txt  fractal_Newton.cpp  fractal_Newton.h  fractal_NewtonOMP.cpp  fractal_newton_simd.cpp  main.cpp  newton_gpu.cu
Newton2-main/: fractal_mpi.cpp  fractal_mpi.h  main.cpp
PracticaPrueba/: CMakeLists.txt  Prueba.cpp
PracticaPrueba2/: CMakeLists.txt  escala.cpp  escala.h  main.cpp
PracticaPruebaMitad/: CMakeLists.txt  escala.cpp  escala2.cpp
Practica_Cuda/: CMakeLists.txt  kernel.cu  main.cpp
Practica_MPI/: CMakeLists.txt  main.cpp  matriz_vector.cpp  matriz_vector.h
Practicas/: CMakeLists.txt  main.cpp  vector_matriz.cpp  vector_matriz.h  vector_serial.cpp  vector_serial.h  vector_simd.cpp  vector_simd.h
PruebaIndividual/: 06_FractalMP  arial_ttf.h  arial_ttf2.h  fractal_mpi.cpp  fractal_mpi.h  main.cpp
PruebaPunto/: CMakeLists.txt  main.cpp
TrabajoImagen/: CMakeLists.txt  main.cpp
